--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -34,6 +34,18 @@
             
         </activity>
         
+        <!--
+	Widget de l'app         
+ -->
+	 <receiver android:name="EveneWidgetProvider" >
+	    <intent-filter>
+	        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+	    </intent-filter>
+	    <meta-data android:name="android.appwidget.provider"
+	               android:resource="@xml/evene_widget_meta" />
+	</receiver>
+	
+        
     </application>
 
 </manifest>
